# oai_function

./: .flake8  .gitignore  .pre-commit-config.yaml  Untitled1.ipynb  pyproject.toml  test.py
oai_function/: __init__.py  signature.py
