[tool.poetry]
name = "oai-function"
version = "0.0.1"
description = "\"A small utility to automatically create OpenAI function calling signatures\""
authors = ["bishwarup307 <write2bishwarup@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
