[tool.poetry]
authors = ["bishwarup307 <write2bishwarup@gmail.com>"]
description = "\"A small utility to automatically create OpenAI function calling signatures\""
license = "MIT"
name = "oai-function"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
docstring-parser = "^0.15"
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
pytest = "^7.4.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
